--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: ZHOU YANG
 logo: /assets/img/logo.png
 description: Welcome to zhou-yang.cn
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
